--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/parallax": "^9.7.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,8 +12,10 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-scroll-parallax": "^3.4.3",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
