--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-spring/parallax": "^9.7.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,12 +10,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^4.0.2",
     "react-icons": "^4.11.0",
-    "react-parallax": "^3.5.1",
+    "react-parallax-tilt": "^1.7.173",
+    "react-pdf": "^7.5.1",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
-    "react-scroll-parallax": "^3.4.3",
-    "react-tsparticles": "^2.12.2",
+    "react-tsparticles": "^1.42.2",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
